pods/probe/volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - name: c1
    image: nginx
  - name: c2
    image: curlimages/curl
    command: ["sleep","1000"]
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir:
      sizeLimit: 500Mi



  # - image: nginx:1.14.2
  #   name: test-container-1
  # - image: nginx
  #   name: test-container-2
