pods/probe/service.yaml
apiVersion: v1
kind:Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
  - port: 8000
  protocol: TCP
  targetPort: 8080
